Reduced size of next meeting blocks to prevent line wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ a { color: #981B1E; }
     box-shadow: 0px 2px 4px #999;
     color: #333;
     display: inline-block;
-    font-size: 6em;
+    font-size: 4.8em;
     font-weight: bold;
     margin: 5px;
     position: relative;
